Updated both calculators to work, working links and success/error messages

--- a/templates/credits.html
+++ b/templates/credits.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div>
-	<p>Thanks your using this application. It was made by {{name}}</p>
+	<p>Thanks your using this application. It was made by {{name}} in {{year}}</p>
 </div>
 <a href="{{url_for('interest_total')}}">Back to calculator</a>
 {% endblock %}
