--- a/templates/interest_form.html
+++ b/templates/interest_form.html
@@ -2,7 +2,19 @@
 {% block content %}
 <div>
 	<!-- This form is incomplete. It will not send the request properly and has missing components.  Add the necessary fields to complete the form.  -->
-	<form>
+	<form method="POST">
+	     <div style="margin: 10px 0px">
+			<label>Amount Invested ($): </label><br/>
+			<input name="initial" placeholder="Amount Invested" value="{{initial}}"/>
+		</div>
+		<div style="margin: 10px 0px">
+			<label>Interest Rate (%): </label><br/>
+			<input name="rate" placeholder="Amount Invested" value="{{rate}}"/>
+		</div>
+		<div style="margin: 10px 0px">
+			<label>Time Invested (Years): </label><br/>
+			<input name="time" placeholder="Amount Invested" value="{{time}}" {%if calc_time %}disabled{% endif %}/>
+		</div>
 	     <div style="margin: 10px 0px">
 			<label>Total Interest ($): </label><br/>
 			<input name="total" placeholder="Amount Invested" value="{{total}}" {%if calc_total %}disabled{% endif %}/>
@@ -13,7 +25,9 @@
 	</form>
 </div>
 <div>
-	{{message}}
+	{{message}} <br>
+	<a href="{{url_for('time_interest')}}">Time Form</a>
+	<a href="{{url_for('interest_total')}}">Total Form</a>
 </div>
 <a href="{{url_for('credits')}}">Credits Page</a>
 {% endblock %}
